--- a/webdev/package.json
+++ b/webdev/package.json
@@ -1,15 +1,18 @@
 {
   "name": "webdev",
   "version": "1.0.0",
-  "description": "",
-  "main": "javascript.js",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "sass": "sass sytle.scss style.css --watch",
+    "start":"parcel index.html",
+    "build": "parcel build index.html"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
+    "parcel-bundler": "^1.12.4",
     "sass": "^1.32.5"
   }
 }
